lab1/Test/L1-A-7-94.output
Error Type A at Line 27
Error Type A at Line 36
Error Type A at Line 41
Error Type A at Line 44
