lab1/Test/L1-A-7-94.cmm
int y2WYoDz6YNo , DmfISwvnkYc5TU 

;
int Inlhjy ( int ek5pUEbg0Y , int lORYv1GFHd7bmqNmwT 
  ) {
  int FkRKDHluMaihsNGq ;
  struct {
    struct hI__VASGbsJhS ao ;
    struct orzejtYByQlKzpm PiNI8p8BnD ;
  }lp57s0DRjbELHI ;
  if ( IkvPikQNUeX8D92 )   if ( ZxEkFMR63er )   while 
    ( b97sHZIuj )   while ( lDauE4WpceEsrg8dL0G )   NB90ePtjHOCv 
    ;


else {
    struct x0_B_fCnCL0Es1y3MLR0 {
    }dFa , YZ7JodrfM7lRfrECkEEo = Z8tTtHKQtSPmpvwylr 
      ;
    return UTc3rzdR ;
  }

}
int g 
;
struct TRtnuK7VIc1ODLgzTie ;
float MgBVE7ieS8tKV ( ) :{
  int miaS2FDROuVPbQs [ 2146828753 ] ;
  while ( T1gcU4OXXStUky )   C_E40Hie = MXRVcn || 
    hYgT4Y_ == k05FOfuBEJyFj9L - - WgcbhB8 [ ZJ47iQ5T4wn 
    && WKP4_2 + - twK1 ( AsI0aXcHVdA < BxhW3NhjesP2qCbql8 
    [ idbRzvEMXDEszb != aPWUqBhguaKQ - bcbeY3pFTiRgNTyK1sw 
    ( _ , a4s = MbXoLV9Ang8cW6WcDk && UoTGEGjv7W4Xf6E 
    >= phzkB + - - ( eSQx7pavDnp2yBTl <= - RQxN2 [ OYCSFAe2PcBrYFBem9k 
    > - t9 ( xnD , - LhJvzWvSN [ dYTe != 1723429548 [ 
    ! MM ] ] ) . tk5 . ME ] ) ) ] ) . tFPr6x_d4m / @517344622.1563681452 
    * ! UzT7b7vIXHyH8y7G5IS ( ) ] ;

}
int ;
int $s5EUNev0CHsHLqLwhAO ( ) {
  Im3kUUUr8vI0BS4XLQy ;
  if ( xrUKbydCMqWKy )   cDkucPyhwMlB ;
else   if &( obLF1lV82oP )   CFSsj2yk ;


  if ( jm8HZANfCofx_b )   e8odA10mhgYmh ;
else   GZz7Q5 ;

}
